<resources>
    <string name="app_name">pCare</string>
    <string name="main_page">p-care预诊系统</string>
    <string name="send">发送</string>
    <string name="look">望</string>
    <string name="listener">闻</string>
    <string name="request">问</string>
    <string name="pulse">切</string>
    <string name="finish">（已完成）</string>
    <string name="unfinish">（未完成）</string>
    <string name="all">预诊结果</string>
    <string name="top2">\t\t\t\t\t欢迎来到PCare预诊系统，接下来我将为您进行预诊，以便专家可以更全面更准确的了解您的病症，您可点击下面任一项开始预诊，或者等待系统自动为您进行全方面预诊。</string>
    <string name="tip_look">望面相\n将要采集您的面容，来分析身体状况。\n 请您将脸部显示到轮廓中，感谢配合！</string>
    <string name="look_tip2">望舌苔\n接下来会根据您的舌苔来分析身体状况。\n 请您张嘴将舌头显示到下框中，感谢配合！</string>
    <string name="look_tip_next">您已完成面部采集</string>
    <string name="listener_tip_next">您已完成听诊项目</string>
    <string name="tip_receive">请您将身份证放于磁卡读取处</string>
    <string name="listener_heart">胸腔</string>
    <string name="listener_stomach">腹腔</string>



    <string name="request_start_tip">\n\t\t\t\t\t接下来我会询问您一些病史以及现在的病症等相关问题，答案的准确性和真实性很重要，请您根据实际情况认真作答。\n \n\t\t\t\t\t您可通过以下任意一种方式作答。</string>
    <string name="request_type_select">触屏点击 \n\n我们会展示一些问题和选项，请您选择最符合您的选项</string>
    <string name="request_type_speak">语音交互 \n\n我们询问您一些问题，请您准确描述出您的情况</string>
    <string name="request_bottom">请讲话...</string>
    <string name="listener_tip">\t\t\t\t\t请您拿起听诊仪放到左图所示位置，保持均匀呼吸。期间我会问您一些问题，请您点击最下方按钮后如实回答。</string>
    <string name="heart_info">检查项目：胸腔听诊 \n心率状态：正常 \n每分钟心跳数：89</string>
    <string name="stomach_info">检查项目：腹腔听诊 \n肠鸣音：正常 \n状态：无明显血管杂音及摩擦音</string>
    <string name="pluse_info">检查项目：脉象 \n脉象状态：平稳 \n脉象类别：实脉</string>
    <string name="people_info">个人信息</string>
    <string name="question_finish">确认</string>

    <string name="result_feature">头晕目眩，动则加剧，遇劳则发，面色晄白，爪甲不荣，神疲乏力，心悸少寐，纳差食少，便溏，舌淡苔薄白，脉细弱。</string>
    <string name="result">气血亏虚症</string>
    <string name="result_advice">八珍汤加减。人参(或党参)、黄芪、当归、炒白术、茯苓、川芎、熟地黄、生白芍、肉桂、枸杞子、怀牛膝、炙甘草等。或具有同类功效的中成药（包括中药注射剂）。</string>
    <string name="result_careful">宜食甘温，忌生冷、油腻之食物。宜补养气血、健运脾胃之品，如红枣、阿胶、桂圆、枸杞、茯苓、莲子、当归、白木耳、糯米等。可选红枣莲子粥等。</string>
    <string name="getwell">祝您早日康复</string>
    <string name="result_face">面相采集报告</string>
    <array name="list_question">
        <item>请问你眩晕多久了？</item>
        <item>你一般在什么情况下出现眩晕？</item>
        <item>请描述下眩晕发作时的感觉。</item>
        <item>请用0-5来描述你眩晕的程度。</item>
        <item>请描述下眩晕持续的时间。</item>
        <item>眩晕多久出现一次?</item>
        <item>父母或其他直系亲属有没有过眩晕</item>
    </array>
    <array name="list_answer">
        <item>1个月内，1~3个月，3~12月，1~3年，多余3年</item>
        <item>起卧床或翻身，抬头或低头，劳累后，噪声或特定声音诱发，头部转动或摇晃，直立行走，情绪激动，睡眠不足，不清楚</item>
        <item>周围在旋转或者房子在晃动，站不住，头重脚轻昏昏沉沉</item>
        <item>1轻微，2中度，3严重，4特别严重，5晕倒</item>
        <item>1分种内，1小时内，几个小时，更长时间</item>
        <item>每天，几天，几个月</item>
        <item>有，无</item>

    </array>
</resources>
