<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="@string/request"
        android:textColor="@color/title_text"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/question_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/text_bck_color"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/second_title_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/request_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/second_title_height"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/request_bottom"
        android:gravity="center"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_list"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/request_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/second_title_height"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/question_finish"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="@dimen/main_text_size"
        android:onClick="toNextTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_list"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>