<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="@string/request"
        android:textColor="@color/title_text"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:src="@mipmap/help"
        android:onClick="startHelpActivity"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/title_text"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/request_start_tip"
        />
    <TextView
        android:id="@+id/request_start_tip"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/text_bck_color"
        android:layout_marginTop="1px"
        android:text="@string/request_start_tip"
        android:textSize="@dimen/main_text_size"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
    <LinearLayout
        android:id="@+id/request_type_select"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/start_look"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="startRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_start_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.5">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@mipmap/request_click_type"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_type_select"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/request_type_speak"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/start_listen"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="startRequest"
        app:layout_constraintStart_toEndOf="@id/request_type_select"
        app:layout_constraintTop_toBottomOf="@id/request_start_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.5">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@mipmap/request_speak_type"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_type_speak"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
       />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>