<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="@string/all"
        android:textColor="@color/title_text"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/title_text"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <LinearLayout
    android:id="@+id/feature_title"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    android:gravity="center_vertical"
    android:background="@color/text_bck_color"
    app:layout_constraintTop_toBottomOf="@id/title">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/result_feature"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="  临床表现"
        />
</LinearLayout>

    <TextView
        android:id="@+id/feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_feature"
        android:layout_margin="20dp"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feature_title"/>

    <LinearLayout
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@color/text_bck_color"
        app:layout_constraintTop_toBottomOf="@id/feature">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/result"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="  初步诊断"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_margin="20dp"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_title"/>
    <LinearLayout
        android:id="@+id/advice_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@color/text_bck_color"
        app:layout_constraintTop_toBottomOf="@id/result">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/result_advice"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="  初步诊断"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_advice"
        android:layout_margin="20dp"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advice_title"/>
    <LinearLayout
        android:id="@+id/advice_careful"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@color/text_bck_color"
        app:layout_constraintTop_toBottomOf="@id/advice">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/result"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="  初步诊断"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/careful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_careful"
        android:layout_margin="20dp"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advice_careful"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/getwell"
        android:textSize="@dimen/big_size"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/careful"/>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="60dp"
        android:src="@mipmap/smile"
        app:layout_constraintTop_toBottomOf="@id/careful"
        />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="60dp"
        android:src="@mipmap/smile"
        app:layout_constraintTop_toBottomOf="@id/careful"
       />
</androidx.constraintlayout.widget.ConstraintLayout>