<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/MAIN_COLOR"
        android:gravity="center"
        android:text="@string/listener"
        android:textColor="@color/title_text"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:src="@mipmap/help"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/listener_heart"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:text="@string/listener_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/listener_stomach"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:text="@string/listener_stomach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listener_heart"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listener_heart"
        app:srcCompat="@mipmap/heart" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:text="脉象状态：平稳\n每分钟心跳数：89"
        android:gravity="center_vertical"
        android:textSize="@dimen/main_text_size"
        android:textColor="@color/TEXT_COLOR"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/listener_stomach" />

    <SurfaceView
        android:id="@+id/listener_heart_wave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>